--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,5 +34,14 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      type="text/javascript"
+      src="https://cdn.emailjs.com/sdk/2.1.0/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function() {
+        emailjs.init('user_ZOHBMFLXBpdbutLvL54dX');
+      })();
+    </script>
   </body>
 </html>
